--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 	<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 9000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
 		<ul>
 			<li class="slide-overlay slide-overlay-level-8" data-transition="fade">
-				<img src="img/slides/slide-1.jpg"  
+				<img data-src="img/slides/slide-1.jpg"  
 					alt=""
 					data-bgposition="center center" 
 					data-bgfit="cover" 
 					data-bgrepeat="no-repeat" 
-					class="rev-slidebg"
+					class="rev-slidebg lazyload"
 					data-bgparallax="8">
 
 				<div class="tp-caption text-color-primary"
