--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
 									<h2 class="text-color-light font-weight-semibold text-9 negative-ls-1 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="400">Order Now</h2>
 								</div>
 								<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
-									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. </p>
+									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Pickup and pay at the counter.</p>
 								</div>
 
 								<!-- GLORIAFOOD BUTTON -->
-								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">PRE-ORDER ONLINE</a>
+								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">ORDER ONLINE</a>
 								
 							</div>
 							<div class="col-md-6 text-center">
@@ -683,8 +683,7 @@
 							<h4 class="text-color-light text-6 mb-1">RICHMOND HILL</h4>
 							<p class="font-weight-light text-color-light line-height-4 opacity-6 mb-2 px-lg-5 mx-lg-4">10066 Bayview Ave, #8, Richmond Hill <a href="tel:905-787-0396" class="text-color-light">(905) 787-0396</a></p>
 							<ul class="social-icons social-icons-clean social-icons-icon-light">
-								<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-								<li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+								<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
 								<li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
 							</ul>
 						</div>
