--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 									<h2 class="text-color-light font-weight-semibold text-9 negative-ls-1 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="400">Order Now</h2>
 								</div>
 								<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
-									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Pickup and pay at the counter.</p>
+									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Don't want to wait in line? Order through our online menu to save time. Pickup and pay at the counter.</p>
 								</div>
 
 								<!-- GLORIAFOOD BUTTON -->
@@ -305,7 +305,7 @@
 								<div class="divider divider-primary divider-small">
 									<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 								</div>
-								<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim.</p>
+								<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Craving sushi or bubble tea? Our delicious hand-crafted menu items will satisfy your cravings.</p>
 								<div class="portf-filter text-center">
 									<ul class="list-unstyled ul-filter">
 										<li data-filter="*" class="active_filter">all</li>
