--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 									<div class="divider divider-primary divider-small">
 										<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
-									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim.</p>
+									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Have any questions or suggestions? Let us know and we will get back to you as soon as possible.</p>
 								</div>
 							</div>
 	
@@ -684,7 +684,6 @@
 							<p class="font-weight-light text-color-light line-height-4 opacity-6 mb-2 px-lg-5 mx-lg-4">10066 Bayview Ave, #8, Richmond Hill <a href="tel:905-787-0396" class="text-color-light">(905) 787-0396</a></p>
 							<ul class="social-icons social-icons-clean social-icons-icon-light">
 								<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-								<li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 text-center">
