--- a/index.html
+++ b/index.html
@@ -318,6 +318,40 @@
 						</div>
 						<div class="row grid pb-4 mb-5 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 							
+							<!-- TEA MENU ITEMS -->
+							<div class="col-md-6 tea">
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Milk Tea</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.7</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p><b>Flavours:</b> Original, Jasmine Green, Taro, Taro Coconut, Strawberry, Coffee, Rose, Almond, Mango, Chocolate, Blueberry, Oolong, Matcha, Honeydew, Banana, Coconut, Hazelnut, Red Bean, Earl Grey.</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tea</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.5</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p><b>Options:</b> Black, Jasmine Green, Oolong, Tea Satchet.</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fruity Green/Black Tea</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.2</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p><b>Flavours:</b> Mango, Green Apple, Tropical Fruit, Yogurt, Honey, Litchi, Grape, Blueberry, Honey Lemon, Passionfruit, Peach, Pineapple, Kumquat, Grapefruit, Strawberry.</p>
+									</div>
+								</div>
+							</div>
+
 							<!-- ROLLS MENU ITEMS -->
 							<div class="col-md-6 rolls">
 								<div class="custom-menu-item">
@@ -384,36 +418,6 @@
 
 							<!-- TEA MENU ITEMS -->
 							<div class="col-md-6 tea">
-								<div class="custom-menu-item">
-									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Milk Tea</h3></div>
-										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.7</strong></div>
-									</div>
-									<div class="custom-menu-item-desc">
-										<p><b>Flavours:</b> Original, Jasmine Green, Taro, Taro Coconut, Strawberry, Coffee, Rose, Almond, Mango, Chocolate, Blueberry, Oolong, Matcha, Honeydew, Banana, Coconut, Hazelnut, Red Bean, Earl Grey.</p>
-									</div>
-								</div>
-								<div class="custom-menu-item">
-									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tea</h3></div>
-										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.5</strong></div>
-									</div>
-									<div class="custom-menu-item-desc">
-										<p><b>Options:</b> Black, Jasmine Green, Oolong, Tea Satchet.</p>
-									</div>
-								</div>
-								<div class="custom-menu-item">
-									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fruity Green/Black Tea</h3></div>
-										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.2</strong></div>
-									</div>
-									<div class="custom-menu-item-desc">
-										<p><b>Flavours:</b> Mango, Green Apple, Tropical Fruit, Yogurt, Honey, Litchi, Grape, Blueberry, Honey Lemon, Passionfruit, Peach, Pineapple, Kumquat, Grapefruit, Strawberry.</p>
-									</div>
-								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fresh Lemon Green Tea</h3></div>
