Update menu items

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 								<div class="divider divider-primary divider-small">
 									<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 								</div>
-								<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Craving sushi or bubble tea? Our delicious hand-crafted menu items will satisfy your cravings.</p>
+								<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Thinking of sushi or bubble tea? Our deliciously handcrafted menu items will satisfy your cravings.</p>
 								<div class="portf-filter text-center">
 									<ul class="list-unstyled ul-filter">
 										<li data-filter="*" class="active_filter">all</li>
@@ -622,7 +622,7 @@
 									<div class="divider divider-primary divider-small">
 										<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
-									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Have any questions or suggestions? Let us know and we will get back to you as soon as possible.</p>
+									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Have any questions or suggestions? Let us know and we'll get back to you as soon as possible.</p>
 								</div>
 							</div>
 	
