--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
 									<div class="divider divider-primary divider-small">
 										<hr class="w-25 text-left custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
-									<p class="text-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. </p>
+									<p class="text-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">At Roll N Tea, we serve a delicious and creative fusion of Korean and Japanese cuisine.</p>
 									<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
-										<p class="opacity-8 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum magna ex lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+										<p class="opacity-8 mb-4">From our delicately handcrafted sushi rolls to our delicious bulgogi bento, we have a great array of Japanese and Korean menu items to satisfy your cravings. On top of that, we serve some of the best and most affordable bubble tea in all of Richmond Hill.</p>
 									</div>
 
 									<div class="collapse" id="aboutViewMore">
-										<p class="opacity-8 mb-0 pb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum lacinia eros quis blandit. Integer id lectus sem. Nulla facilisi. Cras porttitor ac libero vitae fermentum. Ut tincidunt iaculis libero, et sagittis quam gravida in. Maecenas nec fringilla erat, hendrerit rutrum massa. Mauris dapibus ex a nisi imperdiet, eu suscipit ligula malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
+										<!--<p class="opacity-8 mb-0 pb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum lacinia eros quis blandit. Integer id lectus sem. Nulla facilisi. Cras porttitor ac libero vitae fermentum. Ut tincidunt iaculis libero, et sagittis quam gravida in. Maecenas nec fringilla erat, hendrerit rutrum massa. Mauris dapibus ex a nisi imperdiet, eu suscipit ligula malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+										-->
 										<div class="row py-4">
 											<div class="col-6">
 												<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-8.jpg" data-plugin-options="{'type':'image'}">
@@ -251,10 +251,12 @@
 											</div>
 										</div>
 
+										<!--
 										<p class="opacity-8 mb-4">Maecenas eleifend augue in tincidunt congue. Integer dapibus sit amet odio nec tempor. Nullam luctus metus vitae tellus consectetur euismod. Proin consectetur ante vitae vehicula sodales. In pellentesque, nunc quis euismod ultrices, metus mauris consectetur urna, vitae molestie purus erat quis mi. Praesent vel metus mi. Ut sagittis interdum ante, quis posuere eros porta in. Donec auctor ut mi id maximus.</p>
+										-->
 									</div>
 
-									<a data-toggle="collapse" href="#aboutViewMore" role="button" aria-expanded="false" aria-controls="aboutViewMore" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-4 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" data-toggle-text-click="VIEW MORE..." data-toggle-text-click-alt="VIEW LESS...">VIEW MORE...</a>
+									<a data-toggle="collapse" href="#aboutViewMore" role="button" aria-expanded="false" aria-controls="aboutViewMore" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-4 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" data-toggle-text-click="VIEW PHOTOS..." data-toggle-text-click-alt="COLLAPSE...">VIEW PHOTOS...</a>
 								</div>
 							</div>
 							<div class="col-md-6">
