--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html data-style-switcher-options="{'changeLogo': false, 'colorPrimary': '#8AC447', 'colorSecondary': '#e36159', 'colorTertiary': '#2baab1', 'colorQuaternary': '#383f48'}">
 	
 <head>
@@ -570,15 +570,15 @@
 								</div>
 							</div>
 						</div>
-						<div class="row">
+						<!--div class="row">
 							<div class="col text-center">
 								<a href="img/menu/menu_rolls.jpg" data-hash data-hash-offset="92" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-plugin-options="{'type':'image'}">VIEW FULL MENU</a>
 							</div>
-						</div>
+						</div-->
 					</div>
 				</section>
 
-				<div class="container-fluid px-0">
+				<!--div class="container-fluid px-0">
 					<div class="row">
 						<div class="col-6 col-sm-4 col-lg-2 px-0">
 							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-2.jpg" data-plugin-options="{'type':'image'}">
@@ -610,6 +610,208 @@
 								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-7.jpg" alt="Project Image">
 							</a>
 						</div>
+					</div>
+				</div-->
+
+				<div class="slider-container rev_slider_wrapper" style="height: 100vh;" id="home">
+					<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 9000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
+						<ul>
+							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+								<img src="img/slides/slide-1.jpg"
+									 alt=""
+									 data-bgposition="center center"
+									 data-bgfit="cover"
+									 data-bgrepeat="no-repeat"
+									 class="rev-slidebg"
+									 data-bgparallax="8">
+
+								<h2 class="tp-caption text-color-dark"
+									data-frames='[{"from":"opacity:0.1;y:[100%];","speed":2000,"to":"opacity:0.1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['63','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									DYNAMITE ROLL
+								</h2>
+
+								<h2 class="tp-caption text-color-light"
+									data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['62','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									DYNAMITE ROLL
+								</h2>
+							</li>
+
+							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+								<img src="img/slides/slide-2.jpg"
+									 alt=""
+									 data-bgposition="center center"
+									 data-bgfit="cover"
+									 data-bgrepeat="no-repeat"
+									 class="rev-slidebg"
+									 data-bgparallax="8">
+
+								<h2 class="tp-caption text-color-dark"
+									data-frames='[{"from":"opacity:0.1;y:[100%];","speed":2000,"to":"opacity:0.1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['63','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									BUBBLE TEA
+								</h2>
+
+								<h2 class="tp-caption text-color-light"
+									data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['62','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									BUBBLE TEA
+								</h2>
+							</li>
+
+							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+								<img src="img/slides/slide-3.jpg"
+									 alt=""
+									 data-bgposition="center center"
+									 data-bgfit="cover"
+									 data-bgrepeat="no-repeat"
+									 class="rev-slidebg"
+									 data-bgparallax="8">
+
+								<h2 class="tp-caption text-color-dark"
+									data-frames='[{"from":"opacity:0.1;y:[100%];","speed":2000,"to":"opacity:0.1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['63','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									BLACK DRAGON ROLL
+								</h2>
+
+								<h2 class="tp-caption text-color-light"
+									data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['62','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									BLACK DRAGON ROLL
+								</h2>
+							</li>
+
+							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+								<img src="img/slides/slide-4.jpg"
+									 alt=""
+									 data-bgposition="center center"
+									 data-bgfit="cover"
+									 data-bgrepeat="no-repeat"
+									 class="rev-slidebg"
+									 data-bgparallax="8">
+
+								<h2 class="tp-caption text-color-dark"
+									data-frames='[{"from":"opacity:0.1;y:[100%];","speed":2000,"to":"opacity:0.1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['63','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									GREEN DRAGON ROLL
+								</h2>
+
+								<h2 class="tp-caption text-color-light"
+									data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['62','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									GREEN DRAGON ROLL
+								</h2>
+							</li>
+
+							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+								<img src="img/slides/slide-5.jpg"
+									 alt=""
+									 data-bgposition="center center"
+									 data-bgfit="cover"
+									 data-bgrepeat="no-repeat"
+									 class="rev-slidebg"
+									 data-bgparallax="8">
+
+								<h2 class="tp-caption text-color-dark"
+									data-frames='[{"from":"opacity:0.1;y:[100%];","speed":2000,"to":"opacity:0.1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['63','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									MOUNTAIN ROLL
+								</h2>
+
+								<h2 class="tp-caption text-color-light"
+									data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['62','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									MOUNTAIN ROLL
+								</h2>
+							</li>
+
+							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+								<img src="img/slides/slide-6.jpg"
+									 alt=""
+									 data-bgposition="center center"
+									 data-bgfit="cover"
+									 data-bgrepeat="no-repeat"
+									 class="rev-slidebg"
+									 data-bgparallax="8">
+
+								<h2 class="tp-caption text-color-dark"
+									data-frames='[{"from":"opacity:0.1;y:[100%];","speed":2000,"to":"opacity:0.1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['63','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									PHILADELPHIA ROLL
+								</h2>
+
+								<h2 class="tp-caption text-color-light"
+									data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['62','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									PHILADELPHIA ROLL
+								</h2>
+							</li>
+
+							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+								<img src="img/slides/slide-7.jpg"
+									 alt=""
+									 data-bgposition="center center"
+									 data-bgfit="cover"
+									 data-bgrepeat="no-repeat"
+									 class="rev-slidebg"
+									 data-bgparallax="8">
+
+								<h2 class="tp-caption text-color-dark"
+									data-frames='[{"from":"opacity:0.1;y:[100%];","speed":2000,"to":"opacity:0.1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['63','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									RED DRAGON ROLL
+								</h2>
+
+								<h2 class="tp-caption text-color-light"
+									data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
+									data-x="center"
+									data-y="center"
+									data-fontsize="['62','62','62','100']"
+									data-lineheight="['65','65','65','105']">
+									RED DRAGON ROLL
+								</h2>
+							</li>
+						</ul>
 					</div>
 				</div>
 
