--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
 									data-y="center"
 									data-fontsize="['63','62','62','100']"
 									data-lineheight="['65','65','65','105']">
-									BUBBLE TEA
+									FRUIT SLUSH
 								</h2>
 
 								<h2 class="tp-caption text-color-light"
@@ -668,7 +668,7 @@
 									data-y="center"
 									data-fontsize="['62','62','62','100']"
 									data-lineheight="['65','65','65','105']">
-									BUBBLE TEA
+									FRUIT SLUSH
 								</h2>
 							</li>
 
