--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
 								<nav class="collapse">
 									<ul class="nav nav-pills flex-column flex-lg-row" id="mainNav">
 										<li class="dropdown order-1">
-											<a class="dropdown-item" data-hash data-hash-offset="92" href="#home">Home</a>
-										</li>
-										<li class="dropdown order-2">
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#about">About</a>
 										</li>
-										<li class="dropdown order-3">
+										<li class="dropdown order-2">
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#order">Order Now</a>
 										</li>
-										<li class="dropdown order-5">
+										<li class="dropdown order-3">
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#menu">Menu</a>
+										</li>
+										<li class="dropdown order-5">
+											<a class="dropdown-item" data-hash data-hash-offset="92" href="#gallery">Gallery</a>
 										</li>
 										<li class="dropdown order-6">
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#contact">Contact</a>
@@ -187,7 +187,7 @@
 										</li>
 										<li class="align-items-center d-none d-lg-flex order-4 px-5 mx-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">
 											<span class="header-logo">
-												<a href="index.html" class="w-100 text-center">
+												<a href="#home" class="w-100 text-center">
 													<img class="scale-4" alt="Roll N Tea" width="180" height="122" data-sticky-width="82" data-sticky-height="40" data-sticky-top="72" src="img/logo.png">
 												</a>
 											</span>
@@ -613,8 +613,8 @@
 					</div>
 				</div-->
 
-				<div class="slider-container rev_slider_wrapper" style="height: 100vh;" id="home">
-					<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 9000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
+				<div class="slider-container rev_slider_wrapper" style="height: 100vh;" id="gallery">
+					<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 5000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
 						<ul>
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
 								<img src="img/slides/slide-1.jpg"
