--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 									<div class="divider divider-primary divider-small">
 										<hr class="w-25 text-left custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
-									<p class="text-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">At Roll N Tea, we serve a delicious and creative fusion of Korean and Japanese cuisine.</p>
+									<p class="text-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">At Roll N Tea, we serve a delightful fusion of Korean and Japanese cuisine.</p>
 									<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 										<p class="opacity-8 mb-4">From our delicately handcrafted sushi rolls to our delicious bulgogi bento, we are home to a beautiful palette of Japanese and Korean foods to satisfy your cravings. On top of that, we serve some of the best bubble tea in all of Richmond Hill.</p>
 									</div>
