Remove .html extension from url

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				<div class="header-column justify-content-start d-lg-none">
 					<div class="header-row mt-2">
 						<div class="header-logo">
-							<a href="index.html">
+							<a href="index">
 								<img class="scale-5 top-4 ml-4" alt="Roll" width="80" height="54" src="img/logo.png">
 							</a>
 						</div>
@@ -876,7 +876,7 @@
 				<div class="container container pt-5">
 					<div class="row mb-5 pb-4">
 						<div class="col text-center">
-							<a href="index.html" class="text-decoration-none">
+							<a href="index" class="text-decoration-none">
 								<img src="img/logo-full.png" class="img-fluid" width="195" height="132" alt="" />
 							</a>
 						</div>
