--- a/index.html
+++ b/index.html
@@ -823,7 +823,9 @@
 									<div class="divider divider-primary divider-small">
 										<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
-									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Have any questions or suggestions? Let us know and we'll get back to you as soon as possible.</p>
+									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Have any questions or suggestions? Let us know and we'll get back to you as soon as possible.
+										Alternatively, phone us at (905) 787-0396 during <a href="#order"><b>store hours</b></a>.
+									</p>
 								</div>
 							</div>
 	
