--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
 										<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
 									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Have any questions or suggestions? Let us know and we'll get back to you as soon as possible.
-										Alternatively, phone us at (905) 787-0396 during <a href="#order"><b>store hours</b></a>.
+										<br>Alternatively, phone us at <a href="tel:905-787-0396">(905) 787-0396</a> during <a href="#order"><b>store hours</b></a>.
 									</p>
 								</div>
 							</div>
@@ -888,7 +888,8 @@
 						</div>
 						<div class="col-md-4 text-center mb-4 mb-md-0">
 							<h4 class="text-color-light text-6 mb-1">RICHMOND HILL</h4>
-							<p class="font-weight-light text-color-light line-height-4 opacity-6 mb-2 px-lg-5 mx-lg-4">10066 Bayview Ave, #8, Richmond Hill <a href="tel:905-787-0396" class="text-color-light">(905) 787-0396</a></p>
+							<p class="font-weight-light text-color-light line-height-4 opacity-6 mb-2 px-lg-5 mx-lg-4">10066 Bayview Ave, #8, Richmond Hill 
+								<br><a href="tel:905-787-0396" class="text-color-light">(905) 787-0396</a></p>
 							<ul class="social-icons social-icons-clean social-icons-icon-light">
 								<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
