--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
 										<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
 									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
-										Alternatively, phone us at <a href="tel:905-787-0396">(905) 787-0396</a> during <a href="#order"><b>store hours</b></a>.
+										Phone us at <a href="tel:905-787-0396">(905) 787-0396</a> during <a href="#order">store hours</a>.
 									</p>
 								</div>
 							</div>
